# Vibe

./: Cargo.toml  Future.md  LICENSE  README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: feature_build.yml  release.yaml  release.yml
.github/workslows/: feature_build.yml
arch-package/: .SRCINFO  PKGBUILD
resources/: vibe.service  vibe_daemon.service
src/: audio_out.rs  cpal.rs  decode.rs  dummy.rs  main.rs  message.rs  notify.rs  pipewire_out.rs  proto.rs  pulse.rs  pulse_out.rs  rodio_out.rs  startup.rs  stream.rs
