[package]
name = "Vibe_Player"
version = "0.6.0-dev"
edition = "2021"
description = "A music player for the Lyrion Music Server"
license = "MIT"
repository = "https://github.com/GeoffClements/Vibe"
homepage = "https://github.com/GeoffClements/Vibe"
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["lyrion", "audio", "slim", "music"]
readme = "README.md"
authors = ["Geoff Clements <ro2kz0@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
crossbeam = "0.8.4"
hostname = "0.4.1"
log = "0.4.27"
notify-rust = { version = "4.11.7", default-features = false, optional = true, features = [
    "dbus",
] }
pulse = { package = "libpulse-binding", version = "2.30.1", optional = true }
rodio = { version = "0.20.1", optional = true, default-features = false, features = [
    "crossbeam-channel",
] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "stderr",
    "colors",
] }
slimproto = "0.1.25"
symphonia = { version = "*", git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = [
    "all-codecs",
    "all-formats",
] }

[profile.dev.package."symphonia"]
opt-level = 3

[features]
default = ["pulse"]
notify = ["dep:notify-rust"]
pulse = ["dep:pulse"]
rodio = ["dep:rodio"]

[[bin]]
name = "vibe"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Geoff Clements <ro2kz0@gmail.com>"
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/vibe",
        "/usr/bin/",
        "755",
    ],
    [
        "README.md",
        "/usr/share/doc/vibe-player/README.md",
        "644",
    ],
    [
        "resources/vibe.service",
        "/usr/share/doc/vibe-player/resources/vibe.service",
        "644",
    ],
]
features = ["notify"]
maintainer-scripts = "debian/"
extended-description = "Turns your computer into a music streamer."

# [package.metadata.deb.systemd-units]
# unit-scripts = "resources/"
# unit-name = "vibe"
# enable = false
# start = false

# [package.metadata.rpm]
# package = "Vibe_Player"

# [package.metadata.rpm.cargo]
# buildflags = ["--release"]

# [package.metadata.rpm.targets]
# Vibe_Player = { path = "/usr/bin/Vibe_Player" }
