[package]
name = "Vibe_Player"
version = "0.6.0-dev"
edition = "2021"
description = "A music player for the Lyrion Music Server"
license = "MIT"
repository = "https://github.com/GeoffClements/Vibe"
homepage = "https://github.com/GeoffClements/Vibe"
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["lyrion", "audio", "slim", "music"]
readme = "README.md"
# authors = ["Geoff Clements <ro2kz0@gmail.com>"]

[package.metadata.deb]
maintainer = "Geoff Clements <ro2kz0@gmail.com>"
copyright = "2020-2025 Geoff Clements"
section = "universe/sound"
priority = "optional"
assets = [
    [
        "target/release/vibe",
        "/usr/bin/",
        "755",
    ],
    [
        "README.md",
        "/usr/share/doc/vibe-player/README.md",
        "644",
    ],
]
features = ["notify"]
maintainer-scripts = "debian/"
extended-description = "A music player for the Lyrion Music Server"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
crossbeam = "0.8.4"
dirs ="6.0.0"
hostname = "0.4.1"
log = "0.4.28"
notify-rust = { version = "4.11.7", default-features = false, optional = true, features = [
    "dbus",
] }
pulse = { package = "libpulse-binding", version = "2.30.1", optional = true }
rodio = { version = "0.21.1", optional = true, default-features = false, features = [
    "crossbeam-channel",
    "playback",
] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "stderr",
    "colors",
] }
slimproto = "0.1.25"
symphonia = { version = "*", git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = [
    "all-codecs",
    "all-formats",
] }
which = "8.0.0"

[profile.dev.package."symphonia"]
opt-level = 3

[features]
default = ["pulse"]
notify = ["dep:notify-rust"]
pulse = ["dep:pulse"]
rodio = ["dep:rodio"]

[[bin]]
name = "vibe"
path = "src/main.rs"


# [package.metadata.deb.systemd-units]
# unit-scripts = "resources/"
# unit-name = "vibe"
# enable = false
# start = false

# [package.metadata.rpm]
# package = "Vibe_Player"

# [package.metadata.rpm.cargo]
# buildflags = ["--release"]

# [package.metadata.rpm.targets]
# Vibe_Player = { path = "/usr/bin/Vibe_Player" }
